ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/NFGpayment__c.object-meta.xml
<CustomObject>
    <description>TEST Placeholder for NFG imported data.</description>
    <label>NFGpayment</label>
    <nameField>
        <displayFormat>NFG17-{000000}</displayFormat>
        <label>NFGpayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NFGpayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>