ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/AcknowType__c.field-meta.xml
<CustomField>
    <fullName>AcknowType__c</fullName>
    <inlineHelpText>How Acknowledgement letters are to be sent - ByEmail or ByPost.</inlineHelpText>
    <label>AcknowType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ByEmail</fullName>
            </value>
            <value>
                <fullName>ByPost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>