ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonationAmount__c.field-meta.xml
<CustomField>
    <fullName>DonationAmount__c</fullName>
    <label>DonationAmount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>