ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonationDate__c.field-meta.xml
<CustomField>
    <fullName>DonationDate__c</fullName>
    <label>DonationDate</label>
    <type>Date</type>
</CustomField>