ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonationID__c.field-meta.xml
<CustomField>
    <fullName>DonationID__c</fullName>
    <externalId>true</externalId>
    <label>DonationID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>