ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonationStatus__c.field-meta.xml
<CustomField>
    <fullName>DonationStatus__c</fullName>
    <inlineHelpText>Successful, Failed, or Refunded.</inlineHelpText>
    <label>DonationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>