ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorAddress1__c.field-meta.xml
<CustomField>
    <fullName>DonorAddress1__c</fullName>
    <label>DonorAddress1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>