ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorAddress2__c.field-meta.xml
<CustomField>
    <fullName>DonorAddress2__c</fullName>
    <label>DonorAddress2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>