ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorCity__c.field-meta.xml
<CustomField>
    <fullName>DonorCity__c</fullName>
    <label>DonorCity</label>
    <length>42</length>
    <type>Text</type>
</CustomField>