ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorEmail__c.field-meta.xml
<CustomField>
    <fullName>DonorEmail__c</fullName>
    <description>Assumption: email is personal and preferred.</description>
    <label>DonorEmail</label>
    <type>Email</type>
</CustomField>