ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorFeePaid__c.field-meta.xml
<CustomField>
    <fullName>DonorFeePaid__c</fullName>
    <label>DonorFeePaid</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>