ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorFirstN__c.field-meta.xml
<CustomField>
    <fullName>DonorFirstN__c</fullName>
    <label>DonorFirstN</label>
    <length>26</length>
    <type>Text</type>
</CustomField>