ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorLastN__c.field-meta.xml
<CustomField>
    <fullName>DonorLastN__c</fullName>
    <label>DonorLastN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>