ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorName2__c.field-meta.xml
<CustomField>
    <fullName>DonorName2__c</fullName>
    <description>Excel formula concatenates first and last name.</description>
    <label>DonorName2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>