ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorName__c.field-meta.xml
<CustomField>
    <fullName>DonorName__c</fullName>
    <formula>DonorFirstN__c &amp; &quot; &quot; &amp; DonorLastN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DonorName</label>
    <type>Text</type>
</CustomField>