ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorPhone__c.field-meta.xml
<CustomField>
    <fullName>DonorPhone__c</fullName>
    <label>DonorPhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>