ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorState__c.field-meta.xml
<CustomField>
    <fullName>DonorState__c</fullName>
    <label>DonorState</label>
    <length>10</length>
    <type>Text</type>
</CustomField>