ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>DonorStreetAddress__c</fullName>
    <formula>DonorAddress1__c  &amp; &quot; &quot;  &amp;  DonorAddress2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DonorStreetAddress</label>
    <type>Text</type>
</CustomField>