ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/DonorZip__c.field-meta.xml
<CustomField>
    <fullName>DonorZip__c</fullName>
    <label>DonorZip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>