ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/LCFAmtReceive__c.field-meta.xml
<CustomField>
    <fullName>LCFAmtReceive__c</fullName>
    <label>LCFAmtReceive</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>