ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/LCFpayTransactionFee__c.field-meta.xml
<CustomField>
    <fullName>LCFpayTransactionFee__c</fullName>
    <label>LCFpayTransactionFee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>