ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/NewContactRecord__c.field-meta.xml
<CustomField>
    <fullName>NewContactRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewContactRecord</label>
    <type>Checkbox</type>
</CustomField>