ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/NFGacctEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>NFGacctEmailAddress__c</fullName>
    <description>Email address used for logging into donor&apos;s NFG account.</description>
    <inlineHelpText>Email address for logging into donor&apos;s NFG acct.</inlineHelpText>
    <label>NFGacctEmailAddress</label>
    <type>Email</type>
</CustomField>