ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/NFGcampaign__c.field-meta.xml
<CustomField>
    <fullName>NFGcampaign__c</fullName>
    <inlineHelpText>Default, DonateNow, Donation Processing, or Funds raised in FB ...</inlineHelpText>
    <label>NFGcampaign</label>
    <length>42</length>
    <type>Text</type>
</CustomField>