ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/NFGdedication__c.field-meta.xml
<CustomField>
    <fullName>NFGdedication__c</fullName>
    <label>NFGdedication</label>
    <type>TextArea</type>
</CustomField>