ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/NFGMessage__c.field-meta.xml
<CustomField>
    <fullName>NFGMessage__c</fullName>
    <label>NFGMessage</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>