ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/NFGSource__c.field-meta.xml
<CustomField>
    <fullName>NFGSource__c</fullName>
    <description>The new website page = GiveCorps = Everyday Giving
The old website page = Network for Good = Donate Now</description>
    <inlineHelpText>GiveCorps = new website, Network for Good = old page.</inlineHelpText>
    <label>NFGSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>