ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/NFGwebpage__c.field-meta.xml
<CustomField>
    <fullName>NFGwebpage__c</fullName>
    <formula>IF( NFGSource__c =&quot;Network for Good&quot;, &quot;Old&quot;, ( if( NFGSource__c =&quot;GiveCorps&quot;, &quot;New&quot;, &quot;Unknown&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NFGwebpage</label>
    <type>Text</type>
</CustomField>