ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/OpptyName__c.field-meta.xml
<CustomField>
    <fullName>OpptyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NFGpayments</relationshipLabel>
    <relationshipName>NFGpayments</relationshipName>
    <type>Lookup</type>
</CustomField>