ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <inlineHelpText>Credit Card, PayPal or FaceBook.</inlineHelpText>
    <label>PaymentMethod</label>
    <length>22</length>
    <type>Text</type>
</CustomField>