ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/PaymentNo__c.field-meta.xml
<CustomField>
    <fullName>PaymentNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>NFGpayments</relationshipLabel>
    <relationshipName>NFGpayments</relationshipName>
    <type>Lookup</type>
</CustomField>