ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/fields/WhichLGC__c.field-meta.xml
<CustomField>
    <fullName>WhichLGC__c</fullName>
    <label>WhichLGC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>