ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/validationRules/TestValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>TestValidationRule</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS(Contact__c,  OpptyName__c )</errorConditionFormula>
    <errorDisplayField>OpptyName__c</errorDisplayField>
    <errorMessage>Opportunity name must contain name of Contact</errorMessage>
</ValidationRule>