ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/listViews/ALL_2016.listView-meta.xml
<ListView>
    <fullName>ALL_2016</fullName>
    <columns>DonationDate__c</columns>
    <columns>NAME</columns>
    <columns>OpptyName__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>DonationStatus__c</columns>
    <columns>DonationAmount__c</columns>
    <columns>Contact__c</columns>
    <columns>DonationID__c</columns>
    <columns>DonorName__c</columns>
    <columns>NFGwebpage__c</columns>
    <columns>WhichLGC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DonationDate__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2015</value>
    </filters>
    <filters>
        <field>DonationDate__c</field>
        <operation>lessThan</operation>
        <value>1/1/2017</value>
    </filters>
    <label>ALL 2016</label>
</ListView>