ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/listViews/ALL_2017.listView-meta.xml
<ListView>
    <fullName>ALL_2017</fullName>
    <columns>DonationDate__c</columns>
    <columns>NAME</columns>
    <columns>DonationStatus__c</columns>
    <columns>DonationAmount__c</columns>
    <columns>Contact__c</columns>
    <columns>DonorEmail__c</columns>
    <columns>DonationID__c</columns>
    <columns>DonorName__c</columns>
    <columns>NFGwebpage__c</columns>
    <columns>WhichLGC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DonationDate__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2016</value>
    </filters>
    <filters>
        <field>DonationDate__c</field>
        <operation>lessThan</operation>
        <value>1/1/2018</value>
    </filters>
    <label>ALL 2017</label>
</ListView>