ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/listViews/BlankRecords.listView-meta.xml
<ListView>
    <fullName>BlankRecords</fullName>
    <columns>DonationDate__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DonationDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>BlankRecords</label>
</ListView>