ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGpayment__c/listViews/NFGpayments_2017_Failed.listView-meta.xml
<ListView>
    <fullName>NFGpayments_2017_Failed</fullName>
    <columns>DonationDate__c</columns>
    <columns>NAME</columns>
    <columns>DonationStatus__c</columns>
    <columns>DonorEmail__c</columns>
    <columns>Contact__c</columns>
    <columns>DonorName__c</columns>
    <columns>NFGwebpage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DonationStatus__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filters>
        <field>DonationDate__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2016</value>
    </filters>
    <label>NFGpayments 2017 Failed</label>
</ListView>